# vttdiff

./: README.md  pyproject.toml  vttdiff.py
.github/workflows/: release.yml  test.yml
docs/: index.html
src/vttdiff/: __init__.py
test/: test_vttdiff.py
test/data/: vtt3.vtt
