[project]
name = "vttdiff"
version = "0.0.4"
description = 'Create an HTML "diff" for webVTT files'
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.13.3",
    "jiwer>=4.0.0",
]

[project.urls]
homepage = "https://github.com/edsu/vttdiff"

[project.scripts]
vttdiff = "vttdiff:main"

[dependency-groups]
dev = [
    "mypy>=1.15.0",
    "pytest>=8.3.4",
    "ruff>=0.9.6",
    "ty>=0.0.19",
]

[build-system]
requires = ["uv_build>=0.9.8,<0.10.0"]
build-backend = "uv_build"

[tool.pytest.ini_options]
log_cli = true
log_cli_level = "INFO"
addopts = "--capture=no"
